--- a/practice/klon/index.html
+++ b/practice/klon/index.html
@@ -9,24 +9,26 @@
   </head>
   <body>
     <nav class="navigation">
-      <a href="index.html">
-        <img src="img/top6.jpg" alt="Top 6" />
-      </a>
-      <a href="#">Best 6</a>
-      <a href="#">Comparison</a>
-      <a href="#">Online Dating Advice</a>
-      <a href="#">Frequently Asked Questions</a>
-      <a href="#">About US</a>
-      <form id="language-form">
-        <input list="lang" placeholder="English" />
-        <datalist id="lang">
-          <option value="English"></option>
-          <option value="Russian"></option>
-        </datalist>
-      </form>
+      <div class="container">
+        <a href="index.html">
+          <img src="img/top6.jpg" alt="Top 6" />
+        </a>
+        <a href="#">Best 6</a>
+        <a href="#">Comparison</a>
+        <a href="#">Online Dating Advice</a>
+        <a href="#">Frequently Asked Questions</a>
+        <a href="#">About US</a>
+        <form id="language-form">
+          <input list="lang" placeholder="English" />
+          <datalist id="lang">
+            <option value="English"></option>
+            <option value="Russian"></option>
+          </datalist>
+        </form>
+      </div>
     </nav>
 
-    <header>
+    <header class="container">
       <h1>Top 6 online dating clubs in England 2021</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
@@ -36,105 +38,108 @@
       </p>
     </header>
 
-    <h2>Our best web dating clubs</h2>
-    <p>How do we rate?</p>
-    <ul class="clubs-list">
-      <li class="club">
-        <div class="special-offer">
-          <span>The most popular choice</span>
-        </div>
-        <img
-          src="https://picsum.photos/75"
-          alt="divorced"
-          width="75"
-          height="75"
-        />
-        <span><strong>Divorced Club</strong></span>
-        <span><small>Meet divorced ladies now</small></span>
-        <a href="#">Visit</a>
-        <div class="rating">
-          <div class="numerical">9.8</div>
-          <div class="star-rating">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
-        </div>
-        <button type="button">Visit</button>
-      </li>
-      <li class="club">
-        <div class="special-offer">
-          <span>Top place for marital affairs!</span>
-        </div>
-        <img
-          src="https://picsum.photos/75"
-          alt="divorced"
-          width="75"
-          height="75"
-        />
-        <span><strong>Adulteress Club</strong></span>
-        <span><small>Looking for a quick way to have fun?</small></span>
-        <a href="#">Visit</a>
-        <div class="rating">
-          <div class="numerical">9.7</div>
-          <div class="star-rating">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
-        </div>
-        <button type="button">Visit</button>
-      </li>
-    </ul>
+    <div class="container">
+      <div class="main">
+        <header class="main-header">
+          <h2>Our best web dating clubs</h2>
+          <a href="#" class="rates">How do we rate?</a>
+        </header>
+        <ul class="clubs-list">
+          <li class="club">
+            <div class="special-offer">
+              <span>The most popular choice</span>
+            </div>
+            <img
+              src="https://picsum.photos/75"
+              alt="divorced"
+              width="75"
+              height="75"
+              class="club-icon"
+            />
+            <!-- ??? WHY DOESN'T IT ALIGN PROPERLY -->
+            <div class="club-desc">
+              <span><strong>Divorced Club</strong></span>
+              <span><small>Meet divorced ladies now</small></span>
+              <a href="#">Visit</a>
+            </div>
+            <div class="rating">
+              <div class="numerical">9.8</div>
+              <div class="star-rating">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+            </div>
+            <button class="visit-button">Visit</button>
+          </li>
+          <li class="club">
+            <div class="special-offer">
+              <span>Top place for marital affairs!</span>
+            </div>
+            <img
+              src="https://picsum.photos/75"
+              alt="divorced"
+              width="75"
+              height="75"
+              class="club-icon"
+            />
+            <div class="club-desc">
+              <span><strong>Adulteress Club</strong></span>
+              <span><small>Looking for a quick way to have fun?</small></span>
+              <a href="#">Visit</a>
+            </div>
+            <div class="rating">
+              <div class="numerical">9.7</div>
+              <div class="star-rating">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+            </div>
+            <button class="visit-button">Visit</button>
+          </li>
+        </ul>
+      </div>
 
-    <aside>
-      <h2>Latest articles</h2>
-      <ul>
-        <li>
-          <a href="#">
-            <img
-              src="https://picsum.photos/250/100"
-              alt="article-1"
-              width="250"
-              height="100"
-            />
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Asperiores aliquid sed animi repellendus adipisci quod provident
-              illum aliquam vero eligendi? Repellendus harum voluptatibus beatae
-              voluptates repudiandae error asperiores voluptatum sapiente!
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img
-              src="https://picsum.photos/250/100"
-              alt="article-2"
-              width="250"
-              height="100"
-            />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae,
-              facilis atque. Consequatur distinctio facilis fugiat provident,
-              quaerat iste omnis eum deserunt fuga eius natus non, odio aperiam
-              ad maxime explicabo.
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img
-              src="https://picsum.photos/250/100"
-              alt="article-3"
-              width="250"
-              height="100"
-            />
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste
-              sequi debitis accusantium tempore corporis aliquam! Ab odit
-              doloremque ipsa eos, porro quo officia aliquid? Accusantium
-              inventore fugiat sapiente modi dolor.
-            </p>
-          </a>
-        </li>
-      </ul>
-      <a href="#">Read more articles &rarr;</a>
-    </aside>
+      <aside>
+        <h2>Latest articles</h2>
+        <ul>
+          <li class="article-box">
+            <a href="#">
+              <img
+                src="https://picsum.photos/250/100"
+                alt="article-1"
+                width="250"
+                height="100"
+              />
+              <!-- ??? WHERE DOES THE WHITE SPACE COME FROM ??? -->
+              <p class="article-title">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              </p>
+            </a>
+          </li>
+          <li class="article-box">
+            <a href="#">
+              <img
+                src="https://picsum.photos/250/100"
+                alt="article-2"
+                width="250"
+                height="100"
+              />
+              <p class="article-title">Lorem ipsum dolor sit amet.</p>
+            </a>
+          </li>
+          <li class="article-box">
+            <a href="#">
+              <img
+                src="https://picsum.photos/250/100"
+                alt="article-3"
+                width="250"
+                height="100"
+              />
+              <p class="article-title">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              </p>
+            </a>
+          </li>
+        </ul>
+        <a href="#">Read more articles &rarr;</a>
+      </aside>
+    </div>
 
-    <article>
+    <article class="more-info container">
       <p>Online dating for adventurers - Adventures without any effort</p>
       <div>
         <p>
@@ -156,23 +161,23 @@
           repellendus nihil voluptatem!
         </p>
       </div>
-      <p></p>
+      <p>
         <strong
           >&darr; Visit our best page and start meeting women
           online!&darr;</strong
         >
       </p>
-      <button type="button">Visit now</button>
+      <button class="visit-button">Visit now</button>
     </article>
 
     <footer>
+      <div class="container">
         <a href="#">About Us</a>
         <a href="#">Privacy</a>
         <a href="#">Frequently Asked Questions</a>
         <a href="#">Terms of Use</a>
-        <p>
-            Copyright &copy; 20022
-        </p>
+        <p>Copyright &copy; 20022</p>
+      </div>
     </footer>
 
     <div class="cookies"></div>
