--- a/practice/klon/index.html
+++ b/practice/klon/index.html
@@ -38,7 +38,7 @@
       </p>
     </header>
 
-    <div class="container">
+    <div class="container flex-container">
       <div class="main">
         <header class="main-header">
           <h2>Our best web dating clubs</h2>
@@ -49,46 +49,55 @@
             <div class="special-offer">
               <span>The most popular choice</span>
             </div>
-            <img
-              src="https://picsum.photos/75"
-              alt="divorced"
-              width="75"
-              height="75"
-              class="club-icon"
-            />
-            <!-- ??? WHY DOESN'T IT ALIGN PROPERLY -->
-            <div class="club-desc">
-              <span><strong>Divorced Club</strong></span>
-              <span><small>Meet divorced ladies now</small></span>
-              <a href="#">Visit</a>
+            <div class="flex-container">
+              <img
+                src="https://picsum.photos/75"
+                alt="divorced"
+                width="75"
+                height="75"
+                class="club-icon"
+              />
+              <!-- ??? WHY DOESN'T IT ALIGN PROPERLY -->
+              <div class="club-desc">
+                <div><strong>Divorced Club</strong></div>
+                <div><small>Meet divorced ladies now</small></div>
+                <a href="#">Visit</a>
+              </div>
+              <div class="rating">
+                <div class="numerical">9.8</div>
+                <div class="star-rating">
+                  &#9733;&#9733;&#9733;&#9733;&#9733;
+                </div>
+              </div>
+              <!-- VISIT BUTTON TOO WIDE ??? -->
+              <button class="visit-button">Visit</button>
             </div>
-            <div class="rating">
-              <div class="numerical">9.8</div>
-              <div class="star-rating">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
-            </div>
-            <button class="visit-button">Visit</button>
           </li>
           <li class="club">
             <div class="special-offer">
               <span>Top place for marital affairs!</span>
             </div>
-            <img
-              src="https://picsum.photos/75"
-              alt="divorced"
-              width="75"
-              height="75"
-              class="club-icon"
-            />
-            <div class="club-desc">
-              <span><strong>Adulteress Club</strong></span>
-              <span><small>Looking for a quick way to have fun?</small></span>
-              <a href="#">Visit</a>
+            <div class="flex-container">
+              <img
+                src="https://picsum.photos/75"
+                alt="divorced"
+                width="75"
+                height="75"
+                class="club-icon"
+              />
+              <div class="club-desc">
+                <div><strong>Adulteress Club</strong></div>
+                <div><small>Looking for a quick way to have fun?</small></div>
+                <a href="#">Visit</a>
+              </div>
+              <div class="rating">
+                <div class="numerical">9.7</div>
+                <div class="star-rating">
+                  &#9733;&#9733;&#9733;&#9733;&#9733;
+                </div>
+              </div>
+              <button class="visit-button">Visit</button>
             </div>
-            <div class="rating">
-              <div class="numerical">9.7</div>
-              <div class="star-rating">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
-            </div>
-            <button class="visit-button">Visit</button>
           </li>
         </ul>
       </div>
