Style num-rating

--- a/practice/klon/index.html
+++ b/practice/klon/index.html
@@ -57,14 +57,13 @@
                 height="75"
                 class="club-icon"
               />
-              <!-- ??? WHY DOESN'T IT ALIGN PROPERLY -->
               <div class="club-desc">
                 <div><strong>Divorced Club</strong></div>
                 <div><small>Meet divorced ladies now</small></div>
                 <a href="#">Visit</a>
               </div>
               <div class="rating">
-                <div class="numerical">9.8</div>
+                <div class="num-rating">9.8</div>
                 <div class="star-rating">
                   &#9733;&#9733;&#9733;&#9733;&#9733;
                 </div>
