--- a/practice/klon/index.html
+++ b/practice/klon/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/grid_style.css" rel="stylesheet" />
     <title>Dating Site</title>
   </head>
   <body>
-    <nav class="navigation">
-      <div class="container">
+    <nav class="nav-container">
+      <div class="navigation">
+        <div class="hamburger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
         <a href="index.html">
           <img src="img/top6.jpg" alt="Top 6" />
         </a>
-        <a href="#">Best 6</a>
-        <a href="#">Comparison</a>
-        <a href="#">Online Dating Advice</a>
-        <a href="#">Frequently Asked Questions</a>
-        <a href="#">About US</a>
-        <form id="language-form">
-          <input list="lang" placeholder="English" />
-          <datalist id="lang">
-            <option value="English"></option>
-            <option value="Russian"></option>
-          </datalist>
-        </form>
+        <div class="nav-links">
+          <a href="#">Best 6</a>
+          <a href="#">Comparison</a>
+          <a href="#">Online Dating Advice</a>
+          <a href="#">Frequently Asked Questions</a>
+          <a href="#">About US</a>
+          <form id="language-form">
+            <select name="lang" id="lang">
+              <option value="en">English</option>
+              <option value="ru">Russian</option>
+              <option value="fr">French</option>
+            </select>
+          </form>
+        </div>
       </div>
     </nav>
 
-    <header class="container">
+    <header class="main-header">
       <h1>Top 6 online dating clubs in England 2021</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
@@ -38,152 +45,157 @@
       </p>
     </header>
 
-    <div class="container flex-container">
-      <div class="main">
-        <header class="main-header">
-          <h2>Our best web dating clubs</h2>
-          <a href="#" class="rates">How do we rate?</a>
-        </header>
-        <ul class="clubs-list">
-          <li class="club">
-            <div class="special-offer">
-              <span>The most popular choice</span>
-            </div>
-            <div class="flex-club">
+    <article class="clubs">
+      <header class="clubs-header">
+        <h3>Our best web dating clubs</h3>
+        <a href="#" class="rates">How do we rate?</a>
+      </header>
+      <ul class="clubs-list">
+        <li class="club box-shadow">
+          <div class="special-offer">
+            <span>The most popular choice</span>
+          </div>
+          <div class="flex-club">
+            <div class="ico-container">
               <img
                 src="https://picsum.photos/75"
                 alt="divorced"
                 width="75"
                 height="75"
-                class="club-icon"
+                class="club-icon box-shadow"
               />
-              <div class="club-desc">
-                <div><strong>Divorced Club</strong></div>
-                <div><small>Meet divorced ladies now</small></div>
-                <a href="#">Visit</a>
-              </div>
-              <div class="rating">
-                <div class="num-rating">9.8</div>
+              <div id="ico-rating" class="rating">
                 <div class="star-rating">
                   &#9733;&#9733;&#9733;&#9733;&#9733;
                 </div>
               </div>
-              <!-- VISIT BUTTON TOO TALL ??? -->
-              <!-- !!! NEEDED A FLEX-START VAULE -->
-              <button class="visit-button">Visit</button>
             </div>
-          </li>
-          <li class="club">
-            <div class="special-offer">
-              <span>Top place for marital affairs!</span>
+            <div class="club-desc">
+              <div><strong>Divorced Club</strong></div>
+              <div><small>Meet divorced ladies now</small></div>
+              <div id="club-desc-num-rating" class="num-rating">9.8</div>
+              <a href="#">Visit</a>
             </div>
-            <div class="flex-club">
-              <img
-                src="https://picsum.photos/75"
-                alt="divorced"
-                width="75"
-                height="75"
-                class="club-icon"
-              />
-              <div class="club-desc">
-                <div><strong>Adulteress Club</strong></div>
-                <div><small>Looking for a quick way to have fun?</small></div>
-                <a href="#">Visit</a>
-              </div>
-              <div class="rating">
-                <div class="numerical">9.7</div>
-                <div class="star-rating">
-                  &#9733;&#9733;&#9733;&#9733;&#9733;
-                </div>
-              </div>
-              <button class="visit-button">Visit</button>
+            <div id="club-rating" class="rating">
+              <div class="num-rating">9.8</div>
+              <div class="star-rating">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
             </div>
-          </li>
-        </ul>
-      </div>
+            <!-- VISIT BUTTON TOO TALL ??? -->
+            <!-- !!! NEEDED A FLEX-START VAULE -->
+            <a href="#" class="visit-button box-shadow">Visit</a>
+          </div>
+        </li>
+        <li class="club box-shadow">
+          <div class="special-offer">
+            <span>Top place for marital affairs!</span>
+          </div>
+          <div class="flex-club">
+            <img
+              src="https://picsum.photos/75"
+              alt="divorced"
+              width="75"
+              height="75"
+              class="club-icon box-shadow"
+            />
+            <div class="club-desc">
+              <div><strong>Adulteress Club</strong></div>
+              <div><small>Looking for a quick way to have fun?</small></div>
+              <a href="#">Visit</a>
+            </div>
+            <div class="rating">
+              <div class="num-rating">9.7</div>
+              <div class="star-rating">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+            </div>
+            <a href="#" class="visit-button box-shadow">Visit</a>
+          </div>
+        </li>
+      </ul>
+    </article>
 
-      <aside>
-        <h2>Latest articles</h2>
-        <ul>
-          <li class="article-box">
-            <a href="#">
-              <img
-                src="https://picsum.photos/250/100"
-                alt="article-1"
-                width="250"
-                height="100"
-              />
-              <!-- ??? WHERE DOES THE WHITE SPACE COME FROM ??? -->
-              <p class="article-title">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              </p>
-            </a>
-          </li>
-          <li class="article-box">
-            <a href="#">
-              <img
-                src="https://picsum.photos/250/100"
-                alt="article-2"
-                width="250"
-                height="100"
-              />
-              <p class="article-title">Lorem ipsum dolor sit amet.</p>
-            </a>
-          </li>
-          <li class="article-box">
-            <a href="#">
-              <img
-                src="https://picsum.photos/250/100"
-                alt="article-3"
-                width="250"
-                height="100"
-              />
-              <p class="article-title">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              </p>
-            </a>
-          </li>
-        </ul>
-        <a href="#">Read more articles &rarr;</a>
-      </aside>
-    </div>
+    <aside class="latest-articles">
+      <h2>Latest articles</h2>
+      <ul>
+        <li class="article-box box-shadow">
+          <a href="#">
+            <img
+              src="https://picsum.photos/250/100"
+              alt="article-1"
+              width="250"
+              height="100"
+            />
+            <!-- ??? WHERE DOES THE WHITE SPACE COME FROM ??? -->
+            <p class="article-title">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
+          </a>
+        </li>
+        <li class="article-box box-shadow">
+          <a href="#">
+            <img
+              src="https://picsum.photos/250/100"
+              alt="article-2"
+              width="250"
+              height="100"
+            />
+            <p class="article-title">Lorem ipsum dolor sit amet.</p>
+          </a>
+        </li>
+        <li class="article-box box-shadow">
+          <a href="#">
+            <img
+              src="https://picsum.photos/250/100"
+              alt="article-3"
+              width="250"
+              height="100"
+            />
+            <p class="article-title">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
+          </a>
+        </li>
+      </ul>
+      <a href="#" class="articles-more">Read more articles &rarr;</a>
+    </aside>
 
-    <!-- wHY IS THIS WIDER THAN IT SHOULD BE ??? -->
-    <div class="container">
-      <article class="more-info">
-        <p>Online dating for adventurers - Adventures without any effort</p>
-        <div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quis,
-            suscipit voluptatem reprehenderit rem deserunt dicta labore dolores
-            ab autem voluptatum minima, iusto quisquam veniam, accusamus
-            reiciendis vel facere laudantium?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
-            nihil culpa exercitationem labore dolorum aliquam facilis optio,
-            voluptatibus ullam, sed architecto perferendis deleniti eligendi
-            adipisci quos accusamus, nesciunt ex consectetur?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
-            consectetur sapiente saepe, molestiae, voluptate non sit animi
-            laborum veniam cupiditate dolorem porro vero natus obcaecati,
-            voluptatum ab repellendus nihil voluptatem!
-          </p>
-        </div>
+    <h4 class="more-info-header">
+      <span class="more-info-text"
+        >Online dating for adventurers - Adventures without any effort</span
+      >
+    </h4>
+
+    <article class="more-info box-shadow">
+      <div>
+        <h2>What are extramarital affairs?</h2>
         <p>
-          <strong
-            >&darr; Visit our best page and start meeting women
-            online!&darr;</strong
-          >
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quis,
+          suscipit voluptatem reprehenderit rem deserunt dicta labore dolores ab
+          autem voluptatum minima, iusto quisquam veniam, accusamus reiciendis
+          vel facere laudantium?
         </p>
-        <button class="visit-button">Visit now</button>
-      </article>
-    </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+          nihil culpa exercitationem labore dolorum aliquam facilis optio,
+          voluptatibus ullam, sed architecto perferendis deleniti eligendi
+          adipisci quos accusamus, nesciunt ex consectetur?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+          consectetur sapiente saepe, molestiae, voluptate non sit animi laborum
+          veniam cupiditate dolorem porro vero natus obcaecati, voluptatum ab
+          repellendus nihil voluptatem!
+        </p>
+      </div>
+      <p class="visit-best-page">
+        <strong
+          >&darr; Visit our best page and start meeting women
+          online!&darr;</strong
+        >
+      </p>
+      <a href="#" class="visit-button box-shadow">Visit now</a>
+    </article>
 
     <footer>
-      <div class="container">
+      <div class="footer">
         <a href="#">About Us</a>
         <a href="#">Privacy</a>
         <a href="#">Frequently Asked Questions</a>
