--- a/05-Design/index.html
+++ b/05-Design/index.html
@@ -26,7 +26,9 @@
           </p>
           <a class="btn btn--big" href="#">Shop chairs</a>
         </div>
-        <img src="hero.jpg" alt="Photo" />
+        <div class="hero-container">
+          <img src="hero.jpg" alt="Photo" class="hero-photo" />
+        </div>
       </header>
 
       <section>
